fix tabs border and spacing

--- a/openmetadata-ui/src/main/resources/ui/src/components/Glossary/GlossaryTerms/tabs/assets-tabs.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Glossary/GlossaryTerms/tabs/assets-tabs.less
@@ -79,8 +79,6 @@
 .assets-tab-container {
   overflow-y: scroll;
   background-color: @white;
-  padding: @size-mlg;
-  border: 1px solid @grey-15;
 }
 
 .asset-tab-delete-notification {
